--- a/src/pages/carrito.html
+++ b/src/pages/carrito.html
@@ -37,7 +37,7 @@
     <div class="grid md:grid-cols-2 gap-96 space-y-96">
         <!-- IZQUIERDA - TÍTULO -->
          <div class="py-24 mx-auto">
-            <h2 class="text-2xl py-2"><a href="./index.html">Inicio ></a></h2>
+            <h2 class="text-2xl py-2"><a href="./index.html">Inicio ▶︎ </a><span class="text-2xl text-blue-600">Carrito de compras</span></h2>
             <h1 class="text-3xl font-semibold flex items-center gap-2">
                 <span class="text-blue-600 text-2xl">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
@@ -87,7 +87,7 @@
             </select>
             <!-- Botón -->
             <button
-                class="w-full mt-5 py-3 rounded-xl text-white font-semibold bg-gradient-to-r from-blue-600 to-purple-500">
+                class="w-full mt-5 py-3 rounded-xl text-white font-semibold bg-gradient-to-r from-blue-600 to-purple-500 transition-all duration-200 ransform hover:scale-105 cursor-pointer">
                 ✓ Finalizar Compra
             </button>
             <ul class="mt-5 text-gray-700 space-y-1 text-sm">
