--- a/src/pages/carrito.html
+++ b/src/pages/carrito.html
@@ -55,7 +55,7 @@
             <div class="mt-4">
                 <div class="flex justify-between py-1">
                     <span class="text-gray-600">Subtotal</span>
-                    <span class="font-medium">$0</span>
+                    <span class="font-medium" id="subtotal">$0</span>
                 </div>
                 <div class="flex justify-between py-1">
                     <span class="text-gray-600">Envío</span>
@@ -64,7 +64,7 @@
             </div>
             <div class="mt-4 bg-gray-100 rounded-xl p-3 flex justify-between font-bold">
                 <span>Total</span>
-                <span class="text-blue-600">$0</span>
+                <span class="text-blue-600" id="total">$0</span>
             </div>
             <hr class="my-4">
             <!-- Información de envío -->
@@ -87,7 +87,7 @@
             </select>
             <!-- Botón -->
             <button
-                class="w-full mt-5 py-3 rounded-xl text-white font-semibold bg-gradient-to-r from-blue-600 to-purple-500 transition-all duration-200 ransform hover:scale-105 cursor-pointer">
+                class="w-full mt-5 py-3 rounded-xl text-white font-semibold bg-gradient-to-r from-blue-600 to-purple-500 transition-all duration-200 ransform hover:scale-105 cursor-pointer" id="btn-finalizar">
                 ✓ Finalizar Compra
             </button>
             <ul class="mt-5 text-gray-700 space-y-1 text-sm">
